# prototype-cpp

./: CMakeLists.txt  README.md  main.cpp  tests.cpp
lib/: prototype.cpp  prototype.h
scripts/: build.sh  run_main.sh  run_tests.sh
